src/FinancialForce Accounting/objects/codaCurrencyRevalBatchLineItem__c.object
<CustomObject>
    <description>Processes currency revaluation line items into batches.</description>
    <fields>
        <fullName>CurrencyRevaluationBatch__c</fullName>
        <label>Currency Revaluation Batch</label>
        <referenceTo>codaCurrencyRevalBatch__c</referenceTo>
        <relationshipName>CurrencyRevaluationBatchLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluationSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Summary</label>
        <referenceTo>codaCurrencyRevaluationSummary__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batch Line Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationBatchLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <label>Dual Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HashCode__c</fullName>
        <label>Hash Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <label>Home Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Batch Line Item</label>
    <nameField>
        <label>Currency Revaluation Batch Line Item Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Revaluation Batch Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>